# voidmetrics-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  agent.env.example
.github/workflows/: release.yml
releases/: SHA256SUMS.txt
scripts/: build-agent-releases.sh  zig-ar.sh  zig-cc.sh  zig-cxx.sh
src/: main.rs
