[package]
name = "voidmetrics-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
